WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239549
AX: The isolated tree is not updated after role changes in AccessibilityRenderObject::updateRoleAfterChildrenCreation()
https://bugs.webkit.org/show_bug.cgi?id=239549
Summary
AX: The isolated tree is not updated after role changes in AccessibilityRende...
Tyler Wilcock
Reported
2022-04-20 10:32:02 PDT
The isolated tree is not updated after role changes in AccessibilityRenderObject::updateRoleAfterChildrenCreation()
Attachments
Patch
(7.18 KB, patch)
2022-04-20 10:40 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(7.23 KB, patch)
2022-04-21 11:51 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(7.24 KB, patch)
2022-04-21 12:48 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-04-20 10:32:13 PDT
<
rdar://problem/92036686
>
Tyler Wilcock
Comment 2
2022-04-20 10:40:01 PDT
Created
attachment 457995
[details]
Patch
Andres Gonzalez
Comment 3
2022-04-21 11:22:25 PDT
(In reply to Tyler Wilcock from
comment #2
)
> Created
attachment 457995
[details]
> Patch
--- a/LayoutTests/accessibility/mac/invalid-menu-role-does-not-send-notification.html +++ a/LayoutTests/accessibility/mac/invalid-menu-role-does-not-send-notification.html + accessibilityController.addNotificationListener(() => { Shouldn't the => function take a parameter notification? JS is probably this tolerant, but not sure.
Tyler Wilcock
Comment 4
2022-04-21 11:51:13 PDT
Created
attachment 458079
[details]
Patch
Tyler Wilcock
Comment 5
2022-04-21 11:53:23 PDT
> + accessibilityController.addNotificationListener(() => { > > Shouldn't the => function take a parameter notification? JS is probably this > tolerant, but not sure.
Fixed.
Andres Gonzalez
Comment 6
2022-04-21 12:04:17 PDT
(In reply to Tyler Wilcock from
comment #5
)
> > + accessibilityController.addNotificationListener(() => { > > > > Shouldn't the => function take a parameter notification? JS is probably this > > tolerant, but not sure. > Fixed.
Actually looking at the other instances of accessibilityController.addNotificationListener((element, notification) => {, they always have two parameters, the accessible element and the notification name. this is unlike the DoM notification which is an object that encapsulates the target and the type of the notification.
Tyler Wilcock
Comment 7
2022-04-21 12:48:29 PDT
Created
attachment 458083
[details]
Patch
EWS
Comment 8
2022-04-22 00:03:24 PDT
Committed
r293212
(
249883@main
): <
https://commits.webkit.org/249883@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458083
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug