AX: The isolated tree is not updated after role changes in AccessibilityRenderObject::updateRoleAfterChildrenCreation() https://bugs.webkit.org/show_bug.cgi?id=239549

Reviewed by Chris Fleizach and Andres Gonzalez.

Source/WebCore:

In AccessibilityRenderObject::updateRoleAfterChildrenCreation(), if the objects role changes,
we need to inform the cache via AXObjectCache::handleRoleChange which in turn will
update the isolated tree.

Fixes accessibility/mac/invalid-menu-role-does-not-send-notification.html in isolated tree mode.

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::updateRoleAfterChildrenCreation):

LayoutTests:

* accessibility/mac/invalid-menu-role-does-not-send-notification-expected.txt:
* accessibility/mac/invalid-menu-role-does-not-send-notification.html:
Update test to use async-await to actually wait for changes to happen,
which is required to make the test pass in isolated tree mode.

Canonical link: https://commits.webkit.org/249883@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293212 268f45cc-cd09-0410-ab3c-d52691b4dbfc